appId: com.leonkwan46.tonale

---
- clearState
- launchApp
- assertVisible: "Tonale"
- assertVisible: "Email"
- assertVisible: "Password"
- tapOn: "Email"
- inputText: "test@test.com"
- tapOn: "Password"
- inputText: "test123"
- hideKeyboard
- tapOn: 
    id: "auth-submit-button"
- assertVisible: "Welcome to Tonale"

- tapOn: 
    id: "tab-theory"

- assertVisible: 
    id: "lesson-title-lesson-4"
- tapOn: 
    id: "lesson-title-lesson-4"

- assertVisible: 
    id: "choice-.*"
- assertVisible: "1/15"
- assertVisible: 
    id: "correct-answer-.*"
- tapOn: 
    id: "correct-choice-.*"

- assertVisible: "2/15"
- assertVisible: 
    id: "correct-choice-.*"
- tapOn: 
    id: "correct-choice-.*"
- assertVisible: "3/15"
- tapOn: 
    id: "correct-choice-.*"
- assertVisible: "4/15"
- tapOn: 
    id: "correct-choice-.*"
- assertVisible: "5/15"
- tapOn: 
    id: "correct-choice-.*"
- assertVisible: "6/15"
- tapOn: 
    id: "correct-choice-.*"
- assertVisible: "7/15"
- tapOn: 
    id: "correct-choice-.*"
- assertVisible: "8/15"
- tapOn: 
    id: "correct-choice-.*"
- assertVisible: "9/15"
- tapOn: 
    id: "correct-choice-.*"
- assertVisible: "10/15"
- tapOn: 
    id: "correct-choice-.*"
- assertVisible: "11/15"
- tapOn: 
    id: "correct-choice-.*"
- assertVisible: "12/15"
- tapOn: 
    id: "correct-choice-.*"
- assertVisible: "13/15"
- tapOn: 
    id: "correct-choice-.*"
- assertVisible: "14/15"
- tapOn: 
    id: "correct-choice-.*"
- assertVisible: "15/15"
- tapOn: 
    id: "correct-choice-.*"

- assertVisible: "Continue"
- assertVisible: "Retry"
- tapOn: "Continue"

- assertVisible: 
    id: "lesson-title-lesson-4"
- tapOn: 
    id: "lesson-title-lesson-4"
- tapOn: 
    id: "back-button"