appId: com.lkstudio.tonale

---
- clearState
- launchApp
- runFlow:
    file: ../helpers/loginAccount.yaml
- tapOn:
    id: "tab-theory"
- scrollUntilVisible:
    element:
      id: "lesson-title-theory-stage-0-lesson-6"
    direction: UP
    centerElement: true
- tapOn:
    id: "lesson-title-theory-stage-0-lesson-6"

- assertVisible:
    id: "choice-.*"
- assertVisible: "1/8"
- assertVisible:
    id: "correct-answer-.*"
- tapOn:
    id: "choice-.*"
- extendedWaitUntil:
    visible:
      id: "question-explanation-continue-button"
    timeout: 8000
- tapOn:
    id: "question-explanation-continue-button"
- assertVisible: "2/8"
- tapOn:
    id: "choice-.*"
- extendedWaitUntil:
    visible:
      id: "question-explanation-continue-button"
    timeout: 8000
- tapOn:
    id: "question-explanation-continue-button"
- assertVisible: "3/8"
- tapOn:
    id: "correct-choice-.*"
- assertVisible: "4/8"
- tapOn:
    id: "correct-choice-.*"
- assertVisible: "5/8"
- tapOn:
    id: "correct-choice-.*"
- assertVisible: "6/8"
- tapOn:
    id: "correct-choice-.*"
- assertVisible: "7/8"
- tapOn:
    id: "correct-choice-.*"
- assertVisible: "8/8"
- tapOn:
    id: "correct-choice-.*"
- waitForAnimationToEnd
- assertVisible:
    id: "lesson-complete-modal"
- assertVisible:
    id: "lesson-complete-modal-retry-button"
- tapOn:
    id: "lesson-complete-modal-retry-button"
- assertVisible:
    id: "choice-.*"
- assertVisible: "1/8"
- assertVisible:
    id: "correct-answer-.*"
- tapOn:
    id: "correct-choice-.*"
- assertVisible: "2/8"
- tapOn:
    id: "correct-choice-.*"
- assertVisible: "3/8"
- tapOn:
    id: "back-button"
- scrollUntilVisible:
    element:
      id: "lesson-title-theory-stage-0-lesson-6"
    direction: UP
- tapOn:
    id: "lesson-title-theory-stage-0-lesson-6"
- tapOn:
    id: "back-button"

# Go back to the home screen and do revision test
- tapOn:
    id: "tab-index"
- tapOn:
    id: "start-revision-button"
- assertVisible:
    id: "choice-.*"
- assertVisible: "1/2"
- assertVisible:
    id: "correct-choice-.*"
- tapOn:
    id: "correct-choice-.*"
- assertVisible: "2/2"
- assertVisible:
    id: "correct-choice-.*"
- tapOn:
    id: "correct-choice-.*"
- assertVisible:
    id: "revise-button"
- tapOn:
    id: "revise-button"
# Repeat the revision test
- assertVisible:
    id: "choice-.*"
- assertVisible: "1/2"
- assertVisible:
    id: "correct-answer-.*"
- tapOn:
    id: "correct-choice-.*"
- assertVisible: "2/2"
- assertVisible:
    id: "correct-choice-.*"
- tapOn:
    id: "correct-choice-.*"
# Done
- assertVisible:
    id: "done-button"
- tapOn:
    id: "done-button"
# Verify completion state on home screen
- assertVisible:
    id: "tab-index"
- assertVisible:
    id: "revision-card"
- assertVisible:
    id: "revision-card-completion-text"
