appId: com.lkstudio.tonale

---
- clearState
- launchApp
- runFlow:
    file: ../helpers/loginAccount.yaml

- tapOn:
    id: "tab-theory"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "lesson-title-theory-stage-1-final"
    direction: UP
    centerElement: true
    timeout: 30000
    speed: 60
    waitToSettleTimeoutMs: 1000
    visibilityPercentage: 50
- tapOn:
    id: "lesson-title-theory-stage-1-final"

- assertVisible: "1/25"
- assertVisible:
    id: "correct-answer-.*"
- tapOn:
    id: "correct-choice-.*"
- assertVisible: "2/25"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "3/25"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "4/25"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "5/25"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "6/25"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "7/25"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "8/25"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "9/25"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "10/25"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "11/25"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "12/25"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "13/25"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "14/25"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "15/25"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "16/25"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "17/25"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "18/25"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "19/25"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "20/25"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "21/25"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "22/25"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "23/25"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "24/25"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "25/25"
- tapOn:
    id: "correct-choice-.*"
