appId: com.lkstudio.tonale

---
- clearState
- launchApp
- runFlow:
    file: ../helpers/loginAccount.yaml
- tapOn:
    id: "tab-theory"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
        id: "lesson-title-theory-stage-2-lesson-5"
    direction: UP
    centerElement: true
    timeout: 30000
    speed: 60
    waitToSettleTimeoutMs: 1000
    visibilityPercentage: 50
- scrollUntilVisible:
    element:
        id: "lesson-title-theory-stage-2-final"
    direction: UP
    timeout: 30000
    speed: 60
    waitToSettleTimeoutMs: 1000
    visibilityPercentage: 50
- tapOn:
    id: "lesson-title-theory-stage-2-final"

- assertVisible: "1/30"
- assertVisible:
    id: "correct-answer-.*"
- tapOn:
    id: "correct-choice-.*"
- assertVisible: "2/30"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "3/30"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "4/30"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "5/30"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "6/30"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "7/30"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "8/30"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "9/30"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "10/30"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "11/30"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "12/30"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "13/30"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "14/30"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "15/30"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "16/30"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "17/30"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "18/30"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "19/30"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "20/30"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "21/30"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "22/30"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "23/30"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "24/30"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "25/30"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "26/30"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "27/30"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "28/30"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "29/30"
- tapOn:
    id: "correct-choice-.*"

- assertVisible: "30/30"
- tapOn:
    id: "correct-choice-.*"

