appId: com.leonkwan46.tonale

---
- clearState
- launchApp
- assertVisible: "Tonale"
- assertVisible: "Email"
- assertVisible: "Password"
- tapOn: "Email"
- inputText: "test@test.com"
- tapOn: "Password"
- inputText: "test123"
- hideKeyboard
- tapOn: 
    id: "auth-submit-button"
- assertVisible: "Welcome to Tonale"

- tapOn: 
    id: "tab-theory"

- scrollUntilVisible:   
    element:
      id: "lesson-title-stage-2-lesson-3"
    direction: UP
    speed: 100
- tapOn: 
    id: "lesson-title-stage-2-lesson-3"

- assertVisible: 
    id: "choice-.*"
- assertVisible: "1/10"
- assertVisible: 
    id: "correct-answer-.*"
- tapOn: 
    id: "correct-choice-.*"

- assertVisible: "2/10"
- assertVisible: 
    id: "correct-choice-.*"
- tapOn: 
    id: "correct-choice-.*"
- assertVisible: "3/10"
- tapOn: 
    id: "correct-choice-.*"
- assertVisible: "4/10"
- tapOn: 
    id: "correct-choice-.*"
- assertVisible: "5/10"
- tapOn: 
    id: "correct-choice-.*"
- assertVisible: "6/10"
- tapOn: 
    id: "correct-choice-.*"
- assertVisible: "7/10"
- tapOn: 
    id: "correct-choice-.*"
- assertVisible: "8/10"
- tapOn: 
    id: "correct-choice-.*"
- assertVisible: "9/10"
- tapOn: 
    id: "correct-choice-.*"
- assertVisible: "10/10"
- tapOn: 
    id: "correct-choice-.*"

- assertVisible: "Continue"
- assertVisible: "Retry"
- tapOn: "Continue"

- assertVisible: 
    id: "lesson-title-stage-2-lesson-3"
- tapOn: 
    id: "lesson-title-stage-2-lesson-3"
- tapOn: 
    id: "back-button"

